--- a/Obilet.JourneyFinder/src/JourneyFinderMVC/Views/Home/Index.cshtml
+++ b/Obilet.JourneyFinder/src/JourneyFinderMVC/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Models.Responses
-@model JourneyFinderMVC.Models.JourneySearchModel
+@model JourneySearchModel
 
 @{
     Layout = null;
@@ -19,8 +19,8 @@
 <div class="outer-container">
 
     <div class="inner-box"></div>
-    
-    <form asp-action="Index" asp-controller="Journey"  method="post">
+
+    <form asp-action="Index" asp-controller="Journey" method="post">
         <div class="card">
             <div class="form-group">
                 <label>Nereden</label>
