--- a/Obilet.JourneyFinder/src/JourneyFinderMVC/wwwroot/css/site.css
+++ b/Obilet.JourneyFinder/src/JourneyFinderMVC/wwwroot/css/site.css
@@ -1,44 +1,44 @@
 body {
-  margin: 0;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #f2f2f2;
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f2f2f2;
 }
 
 .outer-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: white;
-  padding: 20px;
-  border: 1px solid #ccc;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .inner-box {
-  width: 640px;
-  height: 80px;
-  background-color: blue;
-  margin-bottom: 10px;
+    width: 640px;
+    height: 80px;
+    background-color: blue;
+    margin-bottom: 10px;
 }
 
 .card {
-  background: white;
-  padding: 20px;
-  width: 100%;
-  margin: auto;
-  border-radius: 6px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    background: white;
+    padding: 20px;
+    width: 100%;
+    margin: auto;
+    border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .form-group {
-  margin-bottom: 15px;
+    margin-bottom: 15px;
 }
 
 label {
-  font-weight: bold;
-  display: block;
-  margin-bottom: 5px;
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
 }
