--- a/Obilet.JourneyFinder/src/JourneyFinderMVC/Views/Home/Index.cshtml
+++ b/Obilet.JourneyFinder/src/JourneyFinderMVC/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
         <div class="card">
             <div class="form-group">
                 <label>Nereden</label>
-                <select name="OriginId">
+                <select name="OriginId" id="origin">
                     @foreach (var journey in (List<BusLocation>)TempData["journeys"])
                     {
                         if (journey.Id == Model.OriginId)
@@ -41,7 +41,7 @@
             </div>
             <div class="form-group">
                 <label>Nereye</label>
-                <select name="DestinationId">
+                <select name="DestinationId" id="destination">
                     @foreach (var journey in (List<BusLocation>)TempData["journeys"])
                     {
                         if (journey.Id == Model.DestinationId)
