--- a/Obilet.JourneyFinder/src/JourneyFinderMVC/Views/Home/Index.cshtml
+++ b/Obilet.JourneyFinder/src/JourneyFinderMVC/Views/Home/Index.cshtml
@@ -9,65 +9,81 @@
 <html>
 <head>
     <title>Bilet Ara</title>
-    <link rel="stylesheet" href="~/css/site.css"/>
+    <link rel="stylesheet" href="~/css/site.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
 </head>
 <body>
+    <div class="outer-container">
+        <div class="inner-box"></div>
 
-<div class="outer-container">
+        <form asp-action="Index" asp-controller="Journey" method="post">
+            <div class="card">
+                <div class="form-group location-row">
+                    <div class="location-box">
+                        <label>Nereden</label>
+                        <div class="location-content">
+                            <span class="icon">📍</span>
+                            <select name="OriginId" id="origin">
+                                @foreach (var journey in (List<BusLocation>)TempData["journeys"])
+                                {
+                                    if (journey.Id == Model.OriginId)
+                                    {
+                                        <option value="@journey.Id" selected>@journey.Name</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="@journey.Id">@journey.Name</option>
+                                    }
+                                }
+                            </select>
+                        </div>
+                    </div>
 
-    <div class="inner-box"></div>
+                    <button type="button" id="switchBtn" class="switch-btn">⇅</button>
 
-    <form asp-action="Index" asp-controller="Journey" method="post">
-        <div class="card">
-            <div class="form-group">
-                <label>Nereden</label>
-                <select name="OriginId" id="origin">
-                    @foreach (var journey in (List<BusLocation>)TempData["journeys"])
-                    {
-                        if (journey.Id == Model.OriginId)
-                        {
-                            <option value="@journey.Id" selected>@journey.Name</option>
-                        }
-                        else
-                        {
-                            <option value="@journey.Id">@journey.Name</option>
-                        }
-                    }
-                </select>
-                <button type="button" id="switchBtn">⇅</button>
+                    <div class="location-box">
+                        <label>Nereye</label>
+                        <div class="location-content">
+                            <span class="icon">📍</span>
+                            <select name="DestinationId" id="destination">
+                                @foreach (var journey in (List<BusLocation>)TempData["journeys"])
+                                {
+                                    if (journey.Id == Model.DestinationId)
+                                    {
+                                        <option value="@journey.Id" selected>@journey.Name</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="@journey.Id">@journey.Name</option>
+                                    }
+                                }
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>Tarih</label>
+                    <div class="date-row">
+                        <span class="calendar-icon">📅</span>
+                        <input type="date" name="DepartureDate" id="DepartureDate" value="@Model.DepartureDate.ToString("yyyy-MM-dd")" />
+                        <button type="button" class="today-btn">Bugün</button>
+                        <button type="button" class="tomorrow-btn">Yarın</button>
+                    </div>
+                </div>
+
+                <button type="submit" class="search-btn">Bileti Bul</button>
             </div>
-            <div class="form-group">
-                <label>Nereye</label>
-                <select name="DestinationId" id="destination">
-                    @foreach (var journey in (List<BusLocation>)TempData["journeys"])
-                    {
-                        if (journey.Id == Model.DestinationId)
-                        {
-                            <option value="@journey.Id" selected>@journey.Name</option>
-                        }
-                        else
-                        {
-                            <option value="@journey.Id">@journey.Name</option>
-                        }
-                    }
-                </select>
-            </div>
-            <div class="form-group">
-                <label>Tarih</label>
-                <input type="date" name="DepartureDate" id="DepartureDate"
-                       value="@Model.DepartureDate.ToString("yyyy-MM-dd")"/>
-                <button type="button" id="todayBtn">Bugün</button>
-                <button type="button" id="tomorrowBtn">Yarın</button>
-            </div>
-            <button type="submit">Bileti Bul</button>
+        </form>
+
+        <div class="info-text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
         </div>
-    </form>
-</div>
+    </div>
 
-
-<script src="~/js/site.js"></script>
+    <script src="~/js/site.js"></script>
 </body>
 </html>
